--- a/paper/paper.tex
+++ b/paper/paper.tex
@@ -75,7 +75,7 @@ urlcolor=black
 \maketitle              % typeset the title of the contribution
 
 \begin{abstract}
-The availability of multimodal biomarker measurements in large scale clinical data is fundamental for the application of current disease progression models of neurodegenerative disorders. Due to the lack of some data and to the low sample size, disease progression modeling of rare dementias is currently very challenging. To overcome this problem, in this study we introduce Disease Knowledge Transfer (DKT), a technique for transferring biomarker's progression models between Alzheimer's disease (AD) variants. We assume that different types of dementia affect overlapping brain regions, and thus present shared biomarker characteristics that can be transferred across diseases. We then implement this paradigm as a joint-disease generative model of biomarker progressions, disentangling disease-specific from  disease-agnostic biomarker relationships. We demonstrate DKT on independent datasets of 1) multimodal typical AD data (tAD), with large sample size and several biomarkers available over time, and 2) Posterior Cortical Atrophy (PCA) data, for which only MRI scans are available. DKT is able to predict, in tested PCA subjects, plausible population-level biomarkers for structural and molecular imaging biomarkers, for which no data were available. DKT may be a useful tool to analyse and understand rare forms of dementia for which multimodal data is not available or is limited. Moreover, by leveraging data from multiple diseases, DKT also has the potential to provide more accurate disease staging compared to traditional disease progression models.
+The availability of multimodal biomarker measurements in large scale clinical data is fundamental for the application of current disease progression models of neurodegenerative disorders. Due to the lack of data and to the low sample size, disease progression modeling of rare dementias is currently very challenging. To overcome this problem, we introduce Disease Knowledge Transfer (DKT), a technique for transferring biomarker's progression models between Alzheimer's disease (AD) variants. We assume that different types of dementia affect overlapping brain regions, and thus present shared biomarker characteristics that can be transferred across diseases. We then implement this paradigm as a joint-disease generative model of biomarker progressions, disentangling disease-specific from  disease-agnostic biomarker relationships. We demonstrate DKT on independent datasets of 1) multimodal typical AD data (tAD), with large sample size and several biomarkers available over time, and 2) Posterior Cortical Atrophy (PCA) data, for which only MRI scans are available. DKT is able to predict, in tested PCA subjects, plausible population-level biomarkers for structural and molecular imaging biomarkers, for which no data were available. DKT may be a useful tool to analyse and understand rare forms of dementia for which multimodal data is not available or is limited. Moreover, by leveraging data from multiple diseases, DKT also has the potential to provide more accurate disease staging compared to traditional disease progression models.
 
 
 \keywords{Disease Progression Model, Transfer Learning, Manifold Learning, Alzheimer's Disease, Posterior Cortical Atrophy}
@@ -85,7 +85,7 @@ The availability of multimodal biomarker measurements in large scale clinical da
 
 
 % biomarkers in alzheimer's -> measuring the evolution helps staging in clinical trials
-Several image-based biomarkers for Alzheimer's disease (AD) are currently used to track the progression of the pathology: AV45 Positron Emission Tomography (PET) measuring amyloid-plaque aggregation, AV1451 PET measuring Tau tangle aggregation, Flourodeoxyglucose (FDG) PET measuring brain hypometabolism, Magnetic Resonance Imaging (MRI) measuring structural integrity and Diffusion Tensor Imaging (DTI) measuring connectivity integrity. Measuring the exact evolution of these biomarkers over the disease progression is fundamental for better understanding of the pathology, as well as for improving the stratification in clinical trials through patient staging.
+Several image-based biomarkers for Alzheimer's disease (AD) are currently used to track the progression of pathology: AV45 Positron Emission Tomography (PET) measuring amyloid-plaque aggregation, AV1451 PET measuring tau tangle aggregation, Flourodeoxyglucose (FDG) PET measuring brain hypometabolism, Magnetic Resonance Imaging (MRI) measuring structural integrity and Diffusion Tensor Imaging (DTI) measuring connectivity integrity. Measuring the exact evolution of these biomarkers over the disease progression is fundamental for better understanding of the pathology, as well as for improving stratification in clinical trials through patient staging.
 
 % hypothetical model -> dimention 1: ordering across modalities -> dimention 2: spatial ordering
 A hypothetical model of disease progression has been previously published by \cite{jack2010hypothetical}, which proposes that the first biomarkers to become abnormal are measures of amyloid beta aggregation, followed by tau abnormalities, hypometabolism, structural MRI-based measures and finally cognitive decline. While this hypothetical model proposes a inter-modality ordering of biomarkers in typical AD, it has also been observed that within the same modality, biomarker measurements have a spatial sequence of abnormality that correlates with Braak stages: hippocampal volumes and entorhinal measures become abnormal first, followed by other structures within the temporal, parietal and frontal lobes.
@@ -93,11 +93,10 @@ A hypothetical model of disease progression has been previously published by \ci
 Several data-driven methods have been proposed in order to reconstruct group-wise long term biomarker progressions from collections of short term individual biomarker measurements (\cite{lorenzi2017disease,young2014data,donohue2014estimating}). These approaches mostly rely on the estimation of a latent time reparameterization associated with each individual, often encoded by a translation (time shift) of the subject's measurements over the temporal axis.  This time reparameterization can be used as a proxy of disease staging associated with an individual biomarker profile relatively to the global disease progression model. 
 
 % Flow: multimodal data needed for disease progression -> disease progression on rare dementias is challenging -> cannot apply model learned from other disease because of different spatial patterns -> but studies show at least some partial spatial overlap -> therefore transfer learning possible due to presence of "some overlap" -> benefits of transfer learning -> existing transfer learning literature
-The availability of multimodal collections of biomarker's measurements across clinical groups is fundamental to the application of such disease progression models. For this reason, the application of disease progression modeling to rare dementia type is currently very challenging, due to the associated problem of missing biomarkers and low sample size.  Moreover, an average model of disease progression estimated from sporadic AD cases may not generalize to specific disease variants. For example, in Posterior Cortical Atrophy (PCA), posterior regions such as the occipital lobe and superior parietal regions have been shown to be affected early. While the spatial patterns are distinct between various forms of dementia, recent studies \cite{Ossenkoppele2014atrophy} have showed at least partial spatial-overlap between different clinical phenotypes, while others have further suggested that PCA and typical AD subjects lie on a continuum of phenotypical variation \cite{crutch2012posterior}. The presence of overlap in pathology patterns across different dementias suggests that it should be theoretically possible to perform transfer learning across the diseases. There are two key benefits to performing transfer learning across dementia variants: 1. biomarker evolutions can be estimated for rare dementias for which there is not enough data (unimodal datasets, few subjects, cross-sectional data only) and 2. adding extra information from other datasets can help with staging and biomarker trajectory estimation. While recent studies \cite{hon2017towards} tried to transfer knowledge from generic image datasets to Alzheimer's disease, we are not aware of any studies that have tried to transfer knowledge across different types of Alzheimer's variants, either for diagnosis classification or for estimating continuous biomarker trajectories.
+The availability of multimodal collections of biomarker's measurements across clinical groups is fundamental to the application of such disease progression models. For this reason, the application of disease progression modeling to rare dementia type is currently very challenging, due to the associated problem of missing biomarkers and low sample size.  Moreover, an average model of disease progression estimated from sporadic AD cases may not generalize to specific disease variants. For example, in Posterior Cortical Atrophy (PCA), posterior regions such as the occipital lobe and superior parietal regions have been shown to be affected early. While the spatial patterns are distinct between various forms of dementia, recent studies \cite{Ossenkoppele2014atrophy} have showed at least partial spatial-overlap between different clinical phenotypes, while others have further suggested that PCA and typical AD subjects lie on a continuum of phenotypical variation \cite{crutch2012posterior}. The presence of overlap in pathology patterns across different dementias suggests that it should be theoretically possible to perform transfer learning across the diseases. There are two key benefits to performing transfer learning across dementia variants: 1. biomarker evolutions can be estimated for rare dementias for which there is not enough data (unimodal datasets, few subjects, cross-sectional data only) and 2. adding extra information from other datasets can help with staging and biomarker trajectory estimation. While recent studies \cite{hon2017towards} performed transfer learning from generic image datasets to Alzheimer's disease, we are not aware of any studies that have tried to transfer knowledge across different types of Alzheimer's variants, either for diagnosis classification or for estimating continuous biomarker trajectories.
 
-% To overcome this problem, in this study we aim at defining a probabilistic framework for the estimation of disease progression trajectories in small datasets of specific disease subtypes, in presence of missing biomarkers and low numerosity. To this end we introduce the idea of \emph{transfer learning} of disease progression models across datasets. In particular, our framework is formulated in a probabilistic fashion, in order to quantify the uncertainty associated with low sample size and high variability characterizing the problem. 
 
-We propose Disease Knowledge Transfer (DKT), a generative joint model that estimates continuous multimodal progressions for multiple dementias simultaneously and which inherently performs transfer learning between the modelled dementia phenotypes. This is achieved by disentangling \emph{disease-specific} from \emph{disease-agnostic} biomarker relationships. We fit the DKT model to two datasets simultaneously: (1) the TADPOLE Challenge dataset containing subjects from the ADNI study with MRI, FDG-PET, DTI, AV45 and AV1451 scans and (2) MRI scans from patients with Posterior Cortical Atrophy (PCA) from our local centre. We then used the fitted model to predict non-MRI trajectories for PCA patients, which have been learned from the multimodal TADPOLE dataset. We finally validated the DTI trajectories in PCA using a small test set of 20 DTI scans from the PCA patients and controls from our local centre.
+We propose Disease Knowledge Transfer (DKT), a generative joint model that estimates continuous multimodal progressions for multiple dementias simultaneously and which inherently performs transfer learning between the modelled dementia phenotypes. This is achieved by disentangling \emph{disease-specific} from \emph{disease-agnostic} biomarker relationships. We fit the DKT model to two datasets simultaneously: (1) the TADPOLE Challenge dataset containing subjects from the ADNI study with MRI, FDG-PET, DTI, AV45 and AV1451 scans and (2) MRI scans from patients with Posterior Cortical Atrophy (PCA) from our local centre. We then used the fitted model to predict plausible non-MRI trajectories for PCA patients. We finally validated the DTI trajectories in PCA using a small test set of 20 DTI scans from the PCA patients and controls from our local centre.
 
 % * <alexandra.young@ucl.ac.uk> 2018-03-02T17:54:07.562Z:
 % 
@@ -141,12 +140,12 @@ where $f \approx GP(0, \Sigma_G)$ models the population-level trajectory. The tr
 
 \subsection{Data acquisition and Preprocessing}
 
-We used 87 controls and 76 PCA subjects from our local dataset, which only had MRI scans. From TADPOLE, out of the subjects that contained at least one FDG PET, AV45, AV1451 or DTI scan, we randomly selected a subset of 230 subjects, in order not to bias the numbers towards the typical AD disease.  Volumetric measures for each subject have been obtained using the Freesurfer software in both ADNI and our local dataset. For FDG, AV45 and AV1451 PET, we used already extracted SUVR measures from ADNI which were included in the TADPOLE dataset. For DTI, we used fractional anisotropy (FA) measures from white-matter regions adjacent to each lobe. For every lobe, we averaged the biomarker values for regions of interest within each lobe, regressed out age, gender, TIV and dataset (ADNI vs our local dataset) and then normalised the final biomarker values to lie within the [0,1] range.
+We used 87 controls and 76 PCA subjects from our local dataset, which only had MRI scans. From TADPOLE/ADNI, out of the subjects that contained at least one FDG PET, AV45, AV1451 or DTI scan, we randomly selected a subset of 230 subjects, in order not to bias the numbers towards the typical AD disease.  Volumetric measures for each subject have been obtained using the Freesurfer software in both ADNI and our local dataset. For FDG, AV45 and AV1451 PET, we used already extracted SUVR measures from ADNI. For DTI, we used fractional anisotropy (FA) measures from white-matter regions adjacent to each lobe. For every lobe, we averaged the biomarker values for regions of interest within each lobe, regressed out age, gender, TIV and dataset (ADNI vs our local dataset) and then normalised the final biomarker values to lie within the [0,1] range.
 
 \section{Results}
 
 % Fig1: biomarker traj. over dysfunction scores in one functional unit -> Fig2: dysfunction trajectories over disease stage in the two disease models -> Fig3: inferred biomarker trajectories "directly" over disease stage  in PCA
-Fig. \ref{fig:pcaTadDisSpace}A shows the estimated biomarker trajectories within the \emph{occipital unit} plotted over the dysfunction scores, along with samples from the model posterior and aligned subject data. The X-axis shows the dysfunctionality scores within the occipital unit, which represent estimated time-shifts, in months, from an arbitrary reference X=0, while the Y-axis shows biomarker values normalised to [0,1] range. The model shows a good data fit, and we can observe most PCA subjects having abnormal occipital volumes, thus leading to high occipital dysfunctionality scores, in line with the current understanding of PCA as affecting posterior regions \cite{crutch2012posterior}. Fig. \ref{fig:pcaTadDisSpace} also shows the progression of dysfunctionality scores over the disease stage for (B) typical AD and (C) PCA. In typical AD, we see that temporal dysfunction becomes abnormal earliest, while PCA shows early parietal dysfunction, again in line with previous findings in the literature \cite{crutch2012posterior} (J.C. Baron, Neuroimage, 2001). In Fig. \ref{fig:PCAtrajByModality}, we plot the inferred biomarker trajectories for PCA directly across the disease progression. We do this for five different modalities: MRI Volumes, DTI, FDG, AV45 and AV1451. The results again recapitulate known patterns in PCA, where trajectories from posterior regions become abnormal first in MRI, DTI and AV1451, although in FDG we instead see temporal and hippocampal regions more affected. This might be due to the normalisation of the FDG trajectories on the Y-axis to the [0,1] range, which results in less scaling to trajectories that contain more disease signal. 
+Fig. \ref{fig:pcaTadDisSpace}A shows the estimated biomarker trajectories within the \emph{occipital unit} plotted over the dysfunction scores, along with samples from the model posterior and aligned subject data. The X-axis shows the dysfunctionality scores within the occipital unit, which represent estimated time-shifts, in months, from an arbitrary reference X=0, while the Y-axis shows biomarker values normalised to [0,1] range. The model shows a good data fit, and we can observe most PCA subjects having abnormal occipital volumes, thus leading to high occipital dysfunctionality scores, in line with the current understanding of PCA as affecting posterior regions \cite{crutch2012posterior}. Fig. \ref{fig:pcaTadDisSpace} also shows the progression of dysfunctionality scores over the disease stage for (B) typical AD and (C) PCA. In typical AD, we see that temporal dysfunction becomes abnormal earliest, while PCA shows early parietal dysfunction, again in line with previous findings in the literature \cite{crutch2012posterior} (J.C. Baron, Neuroimage, 2001). In Fig. \ref{fig:PCAtrajByModality}, we plot the inferred biomarker trajectories for PCA directly across the disease progression. We do this for five different modalities: MRI Volumes, DTI, FDG, AV45 and AV1451. The results again recapitulate known patterns in PCA, where trajectories from posterior regions become abnormal first in MRI, DTI and AV1451, with the exception of FDG. This might be due to the normalisation of the FDG trajectories on the Y-axis to the [0,1] range, which results in artificially more scaling to trajectories that contain less disease signal. We also notice two non-monotonic trajectories in the AV45 plot, which are due to bad starting points within parameter optimisation combined with low disease signal within these biomarkers.
 
 \newcommand{\expFld}{figures}
 
@@ -202,11 +201,6 @@ Fig. \ref{fig:pcaTadDisSpace}A shows the estimated biomarker trajectories within
  \caption{Estimated trajectories for the PCA cohort. The only data that were available were the MRI volumetric data. The dynamics of the other biomarkers has been inferred by the model using data from typical AD, and taking into account the different spatial distribution of pathology in PCA as compared to typical AD.}
  \label{fig:PCAtrajByModality}
 \end{figure}
-% * <mrazvan22@gmail.com> 2018-03-02T15:58:16.565Z:
-% 
-% two trajectories in AV45 screwed up due to bad initial starting point. Will take around 2-3h to fix, by implementing a more informed starting point, and re-fit the model. I'll try to see if I have time, otherwise might drop that modality?! Or take out the plot entirely.
-% 
-% ^.
 
 
 \section{Validation}
@@ -227,7 +221,7 @@ We performed validation using a separate test set of 20 DTI scans from controls 
 We present here, for the first time, a framework for joint modelling of biomarker progression in multiple dementias simultaneously. The framework allows transferring biomarker trajectories to rare dementias for which there is not enough data to allow estimation of such trajectories, accounting for a different spatial distribution of pathology between dementia varieties. 
 
 % limitations: each region needs to have disease signal -> validation did not work well in some regions -> not accounted for subject specific effects. 
-The model and the results presented here have several limitations: (1) the model assumes that within each region there is enough disease signal to properly estimate the dysfunctionality scores (2) in the validation, the inferred trajectories in posterior regions traditionally associated with PCA do not match well with the data and (3) in terms of modelling, our framework did not account for subject-specific effects.
+Our work has several limitations: (1) the model assumes that within each region there is enough disease signal to properly estimate the dysfunctionality scores (2) in the validation, the inferred trajectories in posterior regions traditionally associated with PCA do not match well with the data and (3) in terms of modelling, our framework did not account for subject-specific effects.
 
 % how to address aforementioned limitations + future work
 There are several potential avenues for further research. During training, we can account for missing disease signal in some brain regions by adding other types of dementias that affect other regions. The estimated PCA trajectories also need to be thoroughly validated using data from other modalities. The model formulation can also be naturally extended to include subject-specific effects.
